--- a/app/src/main/resources/shared.conf
+++ b/app/src/main/resources/shared.conf
@@ -19,23 +19,25 @@ grpc {
 
   clients {
     rulegroups {
-      # name = "localhost"
-      # port = 9090
-      # token = "test"
+      name = "localhost"
+      port = 9090
+      token = "test"
       deadline = 1 minute
       parallelism = 4
       queueSize = 8192
       headers: {}
+      tls: false
     }
 
     alerts {
-      # name = "localhost"
-      # port = 9090
-      # token = "test"
+      name = "localhost"
+      port = 9090
+      token = "test"
       deadline = 1 minute
       parallelism = 4
       queueSize = 8192
       headers: {}
+      tls: false
     }
   }
 }
