--- a/crds/crd-coralogix-alert-set.yaml
+++ b/crds/crd-coralogix-alert-set.yaml
@@ -74,7 +74,10 @@ spec:
                               groupBy:
                                 description: Required for NEW_VALUE conditions
                                 type: string
-
+                              notifyOnResolved:
+                                descprition: Sends resolve notification when the alert criteria that you defined is no longer met
+                                type: boolean
+                                default: false
                       notifications:
                         type: object
                         properties:
