--- a/crds/crd-coralogix-alert-set.yaml
+++ b/crds/crd-coralogix-alert-set.yaml
@@ -77,7 +77,7 @@ spec:
                               notifyOnResolved:
                                 descprition: Sends resolve notification when the alert criteria that you defined is no longer met
                                 type: boolean
-                                default: false
+                                default: true
                       notifications:
                         type: object
                         properties:
