--- a/app/src/main/resources/shared.conf
+++ b/app/src/main/resources/shared.conf
@@ -1,15 +1,3 @@
-
-k8s-client {
-  insecure = false
-  debug = false
-  cert = "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt" # not used if insecure
-}
-
-cluster {
-  host = "https://kubernetes.default.svc" # Default
-  token-file = "/var/run/secrets/kubernetes.io/serviceaccount/token"
-}
-
 prometheus {
   port = 8080
 }
@@ -19,23 +7,25 @@ grpc {
 
   clients {
     rulegroups {
-      # name = "localhost"
-      # port = 9090
-      # token = "test"
+      name = "localhost"
+      port = 9090
+      token = "test"
       deadline = 1 minute
       parallelism = 4
       queueSize = 8192
       headers: {}
+      tls: false
     }
 
     alerts {
-      # name = "localhost"
-      # port = 9090
-      # token = "test"
+      name = "localhost"
+      port = 9090
+      token = "test"
       deadline = 1 minute
       parallelism = 4
       queueSize = 8192
       headers: {}
+      tls: false
     }
   }
 }
