--- a/app/src/graalvm/resource-config.json
+++ b/app/src/graalvm/resource-config.json
@@ -4,6 +4,7 @@
     {"pattern":"\\QMETA-INF/services/io.grpc.LoadBalancerProvider\\E"}, 
     {"pattern":"\\QMETA-INF/services/io.grpc.ManagedChannelProvider\\E"}, 
     {"pattern":"\\QMETA-INF/services/io.grpc.NameResolverProvider\\E"}, 
+    {"pattern":"\\QMETA-INF/services/io.grpc.ServerProvider\\E"}, 
     {"pattern":"\\Qcrds/crd-coralogix-alert-set.yaml\\E"}, 
     {"pattern":"\\Qcrds/crd-coralogix-loggers.yaml\\E"}, 
     {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"}, 
@@ -19,7 +20,6 @@
     {"pattern":"\\Qzio/ZIO$.class\\E"}, 
     {"pattern":"\\Qzio/ZIO$BracketRelease_.class\\E"}, 
     {"pattern":"\\Qzio/ZIO$WhenM$.class\\E"}, 
-    {"pattern":"\\Qzio/ZIO$ZipLeftFn.class\\E"}, 
     {"pattern":"\\Qzio/ZIO.class\\E"}, 
     {"pattern":"\\Qzio/ZQueue$$anon$5.class\\E"}, 
     {"pattern":"\\Qzio/ZRef$Atomic.class\\E"}, 
