--- a/crds/crd-coralogix-alert-set.yaml
+++ b/crds/crd-coralogix-alert-set.yaml
@@ -78,6 +78,23 @@ spec:
                                 descprition: Sends resolve notification when the alert criteria that you defined is no longer met
                                 type: boolean
                                 default: true
+                              metricAlertPromqlParameters:
+                                description: Data for defining promql metric
+                                type: object
+                                properties:
+                                  promqlText:
+                                    type: string
+                                  arithmeticOperatorModifier:
+                                    type: integer
+                                    format: int32
+                                  sampleThresholdPercentage:
+                                    type: integer
+                                    format: int32
+                                  nonNullPercentage:
+                                    type: integer
+                                    format: int32
+                                  swapNullValues:
+                                    type: boolean
                       notifications:
                         type: object
                         properties:
@@ -103,6 +120,7 @@ spec:
                               - TEXT
                               - TEMPLATE
                               - RATIO
+                              - METRIC
                           severities:
                             type: array
                             items:
@@ -191,7 +209,6 @@ spec:
                                   items:
                                     type: string
                                     x-scala-type: SubsystemName
-
                       notifyEvery:
                         description: The suppress time for an alert in seconds
                         type: number
