--- a/crds/crd-coralogix-rule-group-set.yaml
+++ b/crds/crd-coralogix-rule-group-set.yaml
@@ -195,6 +195,32 @@ spec:
                                          items:
                                            type: string
 
+                                   json-stringify:
+                                     type: object
+                                     required:
+                                       - dest-field
+                                       - delete-source
+                                     properties:
+                                       dest-field:
+                                         type: string
+                                         x-scala-type: FieldName
+                                       delete-source:
+                                         type: boolean
+
+                                   json-parse:
+                                     type: object
+                                     required:
+                                       - dest-field
+                                       - delete-source
+                                       - override-dest
+                                     properties:
+                                       dest-field:
+                                         type: string
+                                         x-scala-type: FieldName
+                                       delete-source:
+                                         type: boolean
+                                       override-dest:
+                                         type: boolean
 
 
             status:
