leader lock garbage collection

--- a/app/src/graalvm/reflect-config.json
+++ b/app/src/graalvm/reflect-config.json
@@ -179,23 +179,11 @@
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
 {
-  "name":"com.sun.crypto.provider.ARCFOURCipher",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
-},
-{
-  "name":"com.sun.crypto.provider.ChaCha20Cipher$ChaCha20Poly1305",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
-},
-{
-  "name":"com.sun.crypto.provider.DESCipher",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
-},
-{
-  "name":"com.sun.crypto.provider.DESedeCipher",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
-},
-{
   "name":"com.sun.crypto.provider.DHParameters",
+  "methods":[{"name":"<init>","parameterTypes":[] }]
+},
+{
+  "name":"com.sun.crypto.provider.HmacCore$HmacSHA256",
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
 {
@@ -497,10 +485,6 @@
 {
   "name":"java.lang.Character",
   "fields":[{"name":"TYPE"}]
-},
-{
-  "name":"java.lang.Deprecated",
-  "allPublicMethods":true
 },
 {
   "name":"java.lang.Double",
@@ -2060,23 +2044,23 @@
   "name":"scala.collection.immutable.List[]"
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3529/0x00000008017017a0",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3524/0x0000000840fce440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3536/0x00000008017051e0",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3530/0x0000000840fcbc40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3542/0x00000008017067d8",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3534/0x0000000840fcac40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3544/0x0000000801707128",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3537/0x000000084103a040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3546/0x00000008017078c8",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3542/0x000000084103c040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2223,10 +2207,6 @@
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
 {
-  "name":"sun.security.rsa.PSSParameters",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
-},
-{
   "name":"sun.security.rsa.RSAKeyFactory$Legacy",
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
@@ -2317,154 +2297,156 @@
   "methods":[{"name":"<init>","parameterTypes":["java.lang.Boolean","java.lang.Object"] }]
 },
 {
-  "name":"zio.App$$Lambda$4101/0x00000008017ad4a8",
+  "name":"zio.App$$Lambda$4077/0x00000008411aa440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$58/0x0000000800ce25f8",
+  "name":"zio.App$$Lambda$58/0x0000000840122440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$790/0x0000000800f336a8",
+  "name":"zio.App$$Lambda$788/0x000000084047b040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$820/0x0000000800f46498",
+  "name":"zio.App$$Lambda$818/0x000000084049bc40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$821/0x0000000800f46980",
+  "name":"zio.App$$Lambda$820/0x000000084049d040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$838/0x0000000800f4c8c0",
+  "name":"zio.App$$Lambda$838/0x00000008404a7840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$840/0x0000000800f4d2c8",
+  "name":"zio.App$$Lambda$840/0x00000008404a9040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$anon$1$$Lambda$3992/0x000000080178c5d0",
+  "name":"zio.App$$anon$1$$Lambda$3982/0x0000000841176040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Fiber$$Lambda$3571/0x000000080170e6b0",
+  "name":"zio.Fiber$$Lambda$3565/0x000000084104a040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Fiber$$Lambda$836/0x0000000800f4b498",
+  "name":"zio.Fiber$$Lambda$833/0x00000008404a5840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Fiber$$Lambda$837/0x0000000800f4b860",
+  "name":"zio.Fiber$$Lambda$835/0x00000008404a6040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Promise$$Lambda$945/0x0000000800f762c8",
+  "name":"zio.Promise$$Lambda$940/0x00000008404f6840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$27/0x0000000800ccd2f8",
+  "name":"zio.ZIO$$$Lambda$27/0x00000008400e3040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$28/0x0000000800cce2f0",
+  "name":"zio.ZIO$$$Lambda$28/0x00000008400e2840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$39/0x0000000800cd3ed0",
+  "name":"zio.ZIO$$$Lambda$39/0x0000000840107040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$826/0x0000000800f48ed0",
+  "name":"zio.ZIO$$$Lambda$822/0x000000084049e040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$832/0x0000000800f4a780",
+  "name":"zio.ZIO$$$Lambda$830/0x00000008404a3440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$834/0x0000000800f4ae08",
+  "name":"zio.ZIO$$$Lambda$831/0x00000008404a4040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$1277/0x00000008011b5228",
+  "name":"zio.ZIO$$Lambda$1248/0x0000000840702840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$4092/0x00000008017ab960",
+  "name":"zio.ZIO$$Lambda$4068/0x00000008411a6040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$4096/0x00000008017ac690",
+  "name":"zio.ZIO$$Lambda$4072/0x00000008411a8040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$882/0x0000000800f5df98",
+  "name":"zio.ZIO$$Lambda$878/0x00000008404c1040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$939/0x0000000800f74a18",
+  "name":"zio.ZIO$$Lambda$932/0x00000008404ee840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$WhenM$$$Lambda$2173/0x00000008014a6000",
+  "name":"zio.ZIO$WhenM$$$Lambda$2128/0x0000000840b89040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZQueue$$anon$5$$Lambda$1336/0x0000000801240b60",
+  "name":"zio.ZQueue$$anon$5$$Lambda$1308/0x00000008407f9440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZRef$Atomic$$Lambda$859/0x0000000800f53838",
+  "name":"zio.ZRef$Atomic$$Lambda$855/0x00000008404b1040",
+  "methods":[
+    {"name":"writeReplace","parameterTypes":[] }
+  ]
+},
+{
+  "name":"zio.ZRef$Atomic$$Lambda$969/0x000000084050d440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZRef$Atomic$$Lambda$975/0x0000000800f7eb88",
+  "name":"zio.ZScope$$$Lambda$4069/0x00000008411a5c40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZScope$$$Lambda$4093/0x00000008017abd30",
+  "name":"zio.ZScope$$$Lambda$976/0x0000000840511840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZScope$$$Lambda$987/0x0000000800f81968",
-  "methods":[{"name":"writeReplace","parameterTypes":[] }]
-},
-{
-  "name":"zio.ZScope$Local$$Lambda$4091/0x00000008017ab3b8",
+  "name":"zio.ZScope$Local$$Lambda$4067/0x00000008411a5040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
   "name":"zio.ZScope$OrderedFinalizer[]"
 },
 {
-  "name":"zio.internal.FiberContext$$Lambda$830/0x0000000800f49fe0",
+  "name":"zio.internal.FiberContext$$Lambda$828/0x00000008404a2840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.internal.FiberContext$$Lambda$984/0x0000000800f81128",
+  "name":"zio.internal.FiberContext$$Lambda$975/0x0000000840511440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.internal.FiberContext$InterruptExit$$$Lambda$852/0x0000000800f51eb0",
+  "name":"zio.internal.FiberContext$InterruptExit$$$Lambda$848/0x00000008404ad440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2169/0x00000008014a3130",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2124/0x0000000840b87440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2170/0x00000008014a33f0",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2125/0x0000000840b88040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2180/0x00000008014a79a8",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2135/0x0000000840b8d440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2183/0x00000008014a5800",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2138/0x0000000840b8e840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
