--- a/app/src/graalvm/reflect-config.json
+++ b/app/src/graalvm/reflect-config.json
@@ -2044,24 +2044,26 @@
   "name":"scala.collection.immutable.List[]"
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3524/0x0000000840fce440",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3509/0x000000084100f840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3530/0x0000000840fcbc40",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3514/0x000000084100cc40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3534/0x0000000840fcac40",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3520/0x000000084100bc40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3537/0x000000084103a040",
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3525/0x0000000841031040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3542/0x000000084103c040",
-  "methods":[{"name":"writeReplace","parameterTypes":[] }]
+  "name":"scalapb.zio_grpc.client.UnaryClientCallListener$$Lambda$3528/0x0000000841032840",
+  "methods":[
+    {"name":"writeReplace","parameterTypes":[] }
+  ]
 },
 {
   "name":"short[]"
@@ -2297,11 +2299,11 @@
   "methods":[{"name":"<init>","parameterTypes":["java.lang.Boolean","java.lang.Object"] }]
 },
 {
-  "name":"zio.App$$Lambda$4077/0x00000008411aa440",
+  "name":"zio.App$$Lambda$4091/0x00000008411b8040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$58/0x0000000840122440",
+  "name":"zio.App$$Lambda$58/0x000000084011a440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2317,7 +2319,7 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$Lambda$838/0x00000008404a7840",
+  "name":"zio.App$$Lambda$837/0x00000008404a7040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2325,19 +2327,19 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.App$$anon$1$$Lambda$3982/0x0000000841176040",
+  "name":"zio.App$$anon$1$$Lambda$3996/0x000000084117fc40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Fiber$$Lambda$3565/0x000000084104a040",
+  "name":"zio.Fiber$$Lambda$3551/0x0000000841040040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Fiber$$Lambda$833/0x00000008404a5840",
+  "name":"zio.Fiber$$Lambda$832/0x00000008404a4840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.Fiber$$Lambda$835/0x00000008404a6040",
+  "name":"zio.Fiber$$Lambda$834/0x00000008404a5440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2345,15 +2347,15 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$27/0x00000008400e3040",
+  "name":"zio.ZIO$$$Lambda$27/0x00000008400e4840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$28/0x00000008400e2840",
+  "name":"zio.ZIO$$$Lambda$28/0x00000008400e4040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$39/0x0000000840107040",
+  "name":"zio.ZIO$$$Lambda$39/0x0000000840105840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2361,7 +2363,7 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$$Lambda$830/0x00000008404a3440",
+  "name":"zio.ZIO$$$Lambda$829/0x00000008404a3040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2369,15 +2371,15 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$1248/0x0000000840702840",
+  "name":"zio.ZIO$$Lambda$1242/0x0000000840715440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$4068/0x00000008411a6040",
+  "name":"zio.ZIO$$Lambda$4082/0x00000008411b3840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$$Lambda$4072/0x00000008411a8040",
+  "name":"zio.ZIO$$Lambda$4086/0x00000008411b5840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2389,11 +2391,11 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZIO$WhenM$$$Lambda$2128/0x0000000840b89040",
+  "name":"zio.ZIO$WhenM$$$Lambda$2131/0x0000000840b94840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZQueue$$anon$5$$Lambda$1308/0x00000008407f9440",
+  "name":"zio.ZQueue$$anon$5$$Lambda$1303/0x00000008407d7440",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2403,11 +2405,13 @@
   ]
 },
 {
-  "name":"zio.ZRef$Atomic$$Lambda$969/0x000000084050d440",
-  "methods":[{"name":"writeReplace","parameterTypes":[] }]
+  "name":"zio.ZRef$Atomic$$Lambda$968/0x000000084050d040",
+  "methods":[
+    {"name":"writeReplace","parameterTypes":[] }
+  ]
 },
 {
-  "name":"zio.ZScope$$$Lambda$4069/0x00000008411a5c40",
+  "name":"zio.ZScope$$$Lambda$4083/0x00000008411b4040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2415,14 +2419,14 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.ZScope$Local$$Lambda$4067/0x00000008411a5040",
+  "name":"zio.ZScope$Local$$Lambda$4081/0x00000008411b3040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
   "name":"zio.ZScope$OrderedFinalizer[]"
 },
 {
-  "name":"zio.internal.FiberContext$$Lambda$828/0x00000008404a2840",
+  "name":"zio.internal.FiberContext$$Lambda$827/0x00000008404a2040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
@@ -2434,19 +2438,19 @@
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2124/0x0000000840b87440",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2127/0x0000000840b92840",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2125/0x0000000840b88040",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2128/0x0000000840b93040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2135/0x0000000840b8d440",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2138/0x0000000840b99040",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
-  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2138/0x0000000840b8e840",
+  "name":"zio.interop.reactivestreams.Adapters$$anon$1$$Lambda$2141/0x0000000840b99c40",
   "methods":[{"name":"writeReplace","parameterTypes":[] }]
 },
 {
